<resources>
    <string name="app_name">翻译评估系统</string>
    <string name="translate_button">翻译系统</string>
    <string name="evaluate_button">评估系统</string>
    <string name="select_system">请选择以下系统</string>
    <!-- 新增字符串资源用于显示页面标题 -->
    <string name="evaluate_activity_title">翻译评估系统</string>
    <!-- 新增字符串资源用于显示标签和按钮 -->
    <string name="select_file_button">请选择原始文件</string>
    <!-- 新增字符串资源用于显示标签和按钮 -->
    <string name="select_origin_file_button">请选择文件</string>
    <!-- 新增字符串资源用于选择翻译文件按钮 -->
    <string name="select_translate_file_button">请选择翻译文件</string>
    <!-- 新增字符串资源用于显示“您选择的文件是：” -->
    <string name="selected_file_text">您选择的文件是：</string>
    <!-- 新增字符串资源用于开始评估按钮 -->
    <string name="start_evaluation_button">开始评估</string>
    <string name="select_model_text">请选择模型：</string>
    <string name="translate_activity_title">内容翻译系统</string>
    <string name="start_translate_button">开始翻译</string>
    <string name="select_language_text">目标语言：</string>
    <string name="select_document_language_text">文档语言：</string>
    <string name="back_button_text">返回</string>
    <string-array name="models">
        <item>Deepseek</item>
        <item>Deepl</item>
    </string-array>
    <string-array name="language">
        <item>简体中文</item>
        <item>西班牙语</item>
        <item>英文</item>
        <item>德语</item>
        <item>葡萄牙语</item>
        <item>意大利语</item>
        <item>法语</item>
        <item>俄语</item>
        <item>日语</item>
        <item>韩语</item>
        <item>希腊语</item>
        <item>阿拉伯语</item>
        <item>荷兰语</item>
    </string-array>
</resources>