<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:id="@+id/textViewSelectSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="40dp"
        android:paddingTop="5dp"
        android:text="@string/select_system"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textViewSelectSystem"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:background="#FFDDC1"
        android:text="@string/translate_button" />

    <Button
        android:id="@+id/evaluate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/translate"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="24dp"
        android:background="#FFDDC1"
        android:text="@string/evaluate_button" />
</RelativeLayout>