<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 使用LinearLayout包裹 backButton 和 textViewEvaluate -->
    <LinearLayout
        android:id="@+id/firstLineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textViewEvaluate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/evaluate_activity_title"
            android:textSize="20sp"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/selectOriginFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_file_button"
        android:layout_below="@id/firstLineLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- 新增布局：您选择的文件是： -->
    <LinearLayout
        android:id="@+id/originFileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/selectOriginFileButton"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_file_text" />

        <TextView
            android:id="@+id/selectedFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />
    </LinearLayout>
    <!-- 新增布局：请选择语言 -->
    <LinearLayout
        android:id="@+id/originLanguageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/originFileLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/select_document_language_text"/>

        <Spinner
            android:id="@+id/originSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/language" />
    </LinearLayout>

    <Button
        android:id="@+id/selectTranslateFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_translate_file_button"
        android:layout_below="@id/originLanguageLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- 新增布局：您选择的文件是： -->
    <LinearLayout
        android:id="@+id/selectedTranslateFileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/selectTranslateFileButton"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_file_text" />

        <TextView
            android:id="@+id/selectedTranslateFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- 新增布局：请选择模型 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/selectedTranslateFileLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/select_document_language_text"/>

        <Spinner
            android:id="@+id/targetSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/language" />
    </LinearLayout>

    <!-- 新增按钮，放置在整个页面的底部 -->
    <Button
        android:id="@+id/startEvaluationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="开始评估" />

    <!-- 新增进度条 -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>